--- a/iOS_Aura/Base.lproj/Main.storyboard
+++ b/iOS_Aura/Base.lproj/Main.storyboard
@@ -334,8 +334,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ubm-gd-mCl" customClass="DevicePanelView" customModule="iOS_Aura" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="64" width="600" height="190"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebP-an-ueG">
-                                        <rect key="frame" x="12" y="8" width="212" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ebP-an-ueG">
+                                        <rect key="frame" x="12" y="8" width="258" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="5fV-Sb-AnE"/>
                                         </constraints>
@@ -343,17 +343,18 @@
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="DSN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5QJ-DO-unj">
-                                        <rect key="frame" x="20" y="46" width="226" height="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DSN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="5QJ-DO-unj">
+                                        <rect key="frame" x="20" y="46" width="250" height="17"/>
                                         <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="1lZ-XQ-lnQ"/>
                                             <constraint firstAttribute="height" constant="17" id="Zit-tY-5f3"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Conn Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Odc-pR-3lK">
-                                        <rect key="frame" x="20" y="67" width="226" height="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Conn Status" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="Odc-pR-3lK">
+                                        <rect key="frame" x="20" y="67" width="250" height="17"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="17" id="OPJ-Kw-1rJ"/>
                                         </constraints>
@@ -361,24 +362,24 @@
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="OEM Model" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ws5-uR-nUu">
-                                        <rect key="frame" x="20" y="88" width="226" height="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OEM Model" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="Ws5-uR-nUu">
+                                        <rect key="frame" x="20" y="88" width="250" height="17"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="17" id="Mse-1e-W3u"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Model" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j7R-kf-4QG">
-                                        <rect key="frame" x="20" y="109" width="226" height="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Model" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="j7R-kf-4QG">
+                                        <rect key="frame" x="20" y="109" width="250" height="17"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="17" id="TYy-sJ-nV0"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="MAC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9AV-Wd-cgd">
-                                        <rect key="frame" x="20" y="130" width="226" height="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MAC" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="9AV-Wd-cgd">
+                                        <rect key="frame" x="20" y="130" width="250" height="17"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="17" id="3Ci-dh-Akx"/>
                                         </constraints>
@@ -386,8 +387,8 @@
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="LAN IP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMD-TH-JbM" userLabel="LAN IP Address Label">
-                                        <rect key="frame" x="20" y="151" width="226" height="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LAN IP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="sMD-TH-JbM" userLabel="LAN IP Address Label">
+                                        <rect key="frame" x="20" y="151" width="250" height="17"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="17" id="l6M-z8-rXv"/>
                                         </constraints>
@@ -411,19 +412,29 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="Ws5-uR-nUu" firstAttribute="top" secondItem="Odc-pR-3lK" secondAttribute="bottom" constant="4" id="10x-ga-KgB"/>
+                                    <constraint firstItem="9AV-Wd-cgd" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="45G-Wh-1RA"/>
+                                    <constraint firstItem="Odc-pR-3lK" firstAttribute="width" secondItem="ebP-an-ueG" secondAttribute="width" id="4d7-wV-X6V"/>
                                     <constraint firstItem="sMD-TH-JbM" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="9bu-18-Xt9"/>
+                                    <constraint firstItem="Ws5-uR-nUu" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="A0a-rd-zdE"/>
+                                    <constraint firstItem="ebP-an-ueG" firstAttribute="trailing" secondItem="5QJ-DO-unj" secondAttribute="trailing" id="Bkn-rW-k4k"/>
                                     <constraint firstItem="Odc-pR-3lK" firstAttribute="top" secondItem="5QJ-DO-unj" secondAttribute="bottom" constant="4" id="CYp-dC-bbd"/>
                                     <constraint firstItem="Ws5-uR-nUu" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="DdE-UV-NQ4"/>
                                     <constraint firstAttribute="bottom" secondItem="Y1O-DF-GFi" secondAttribute="bottom" constant="8" id="HVN-7u-BFe"/>
+                                    <constraint firstItem="Odc-pR-3lK" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="KRZ-fi-MqZ"/>
                                     <constraint firstItem="j7R-kf-4QG" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="PJh-hf-Biu"/>
                                     <constraint firstItem="9AV-Wd-cgd" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="Ru6-OW-1eb"/>
+                                    <constraint firstItem="sMD-TH-JbM" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="Tem-th-itE"/>
                                     <constraint firstItem="sMD-TH-JbM" firstAttribute="top" secondItem="9AV-Wd-cgd" secondAttribute="bottom" constant="4" id="V6n-hi-9YF"/>
                                     <constraint firstItem="ebP-an-ueG" firstAttribute="top" secondItem="ubm-gd-mCl" secondAttribute="top" constant="8" id="XXC-YQ-uCf"/>
                                     <constraint firstAttribute="trailing" secondItem="Y1O-DF-GFi" secondAttribute="trailing" constant="8" id="Xor-LP-FV6"/>
+                                    <constraint firstItem="j7R-kf-4QG" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="bFS-ea-i65"/>
                                     <constraint firstItem="j7R-kf-4QG" firstAttribute="top" secondItem="Ws5-uR-nUu" secondAttribute="bottom" constant="4" id="boQ-80-ro4"/>
                                     <constraint firstItem="5QJ-DO-unj" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="cg1-69-UcD"/>
+                                    <constraint firstItem="Ws5-uR-nUu" firstAttribute="width" secondItem="ebP-an-ueG" secondAttribute="width" id="fWn-eI-0yl"/>
                                     <constraint firstItem="Odc-pR-3lK" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="igq-TQ-e6p"/>
+                                    <constraint firstItem="Odc-pR-3lK" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="joN-QP-Bg9"/>
                                     <constraint firstItem="9AV-Wd-cgd" firstAttribute="top" secondItem="j7R-kf-4QG" secondAttribute="bottom" constant="4" id="nVh-Nr-00f"/>
+                                    <constraint firstItem="j7R-kf-4QG" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="qgR-fj-Ghc"/>
                                     <constraint firstItem="ebP-an-ueG" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="12" id="rNM-Bw-pp1"/>
                                     <constraint firstItem="5QJ-DO-unj" firstAttribute="top" secondItem="ebP-an-ueG" secondAttribute="bottom" constant="8" id="vMW-FZ-blM"/>
                                     <constraint firstAttribute="height" constant="190" id="wbA-4W-0o5"/>
@@ -431,6 +442,10 @@
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
+                                        <exclude reference="4d7-wV-X6V"/>
+                                        <exclude reference="joN-QP-Bg9"/>
+                                        <exclude reference="fWn-eI-0yl"/>
+                                        <exclude reference="qgR-fj-Ghc"/>
                                         <exclude reference="Ru6-OW-1eb"/>
                                     </mask>
                                 </variation>
