--- a/iOS_Aura/Base.lproj/Main.storyboard
+++ b/iOS_Aura/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="m9m-D0-krJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="m9m-D0-krJ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -396,19 +396,6 @@
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y1O-DF-GFi">
-                                        <rect key="frame" x="522" y="152" width="70" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="Op5-5p-hpo"/>
-                                            <constraint firstAttribute="width" constant="70" id="mGc-xo-L1F"/>
-                                        </constraints>
-                                        <state key="normal" title="AutoTest">
-                                            <color key="titleColor" red="0.1141904071" green="0.49319788809999998" blue="0.079485878349999997" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <segue destination="ncm-l0-4MD" kind="presentation" identifier="toLanModeTest" id="JqG-dh-EAY"/>
-                                        </connections>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nqe-Al-TtN">
                                         <rect key="frame" x="442" y="8" width="150" height="30"/>
                                         <constraints>
@@ -433,7 +420,6 @@
                                     <constraint firstItem="ebP-an-ueG" firstAttribute="trailing" secondItem="5QJ-DO-unj" secondAttribute="trailing" id="Bkn-rW-k4k"/>
                                     <constraint firstItem="Odc-pR-3lK" firstAttribute="top" secondItem="5QJ-DO-unj" secondAttribute="bottom" constant="4" id="CYp-dC-bbd"/>
                                     <constraint firstItem="Ws5-uR-nUu" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="DdE-UV-NQ4"/>
-                                    <constraint firstAttribute="bottom" secondItem="Y1O-DF-GFi" secondAttribute="bottom" constant="8" id="HVN-7u-BFe"/>
                                     <constraint firstItem="Odc-pR-3lK" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="KRZ-fi-MqZ"/>
                                     <constraint firstAttribute="trailing" secondItem="nqe-Al-TtN" secondAttribute="trailing" constant="8" id="LHJ-lI-Yuv"/>
                                     <constraint firstItem="j7R-kf-4QG" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="PJh-hf-Biu"/>
@@ -441,7 +427,6 @@
                                     <constraint firstItem="sMD-TH-JbM" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="Tem-th-itE"/>
                                     <constraint firstItem="sMD-TH-JbM" firstAttribute="top" secondItem="9AV-Wd-cgd" secondAttribute="bottom" constant="4" id="V6n-hi-9YF"/>
                                     <constraint firstItem="ebP-an-ueG" firstAttribute="top" secondItem="ubm-gd-mCl" secondAttribute="top" constant="8" id="XXC-YQ-uCf"/>
-                                    <constraint firstAttribute="trailing" secondItem="Y1O-DF-GFi" secondAttribute="trailing" constant="8" id="Xor-LP-FV6"/>
                                     <constraint firstItem="j7R-kf-4QG" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="bFS-ea-i65"/>
                                     <constraint firstItem="j7R-kf-4QG" firstAttribute="top" secondItem="Ws5-uR-nUu" secondAttribute="bottom" constant="4" id="boQ-80-ro4"/>
                                     <constraint firstItem="5QJ-DO-unj" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="cg1-69-UcD"/>
@@ -701,6 +686,7 @@
                         <outlet property="panelView" destination="ubm-gd-mCl" id="umj-w1-nPv"/>
                         <outlet property="tableView" destination="Ap0-u1-kSG" id="ptA-gD-Aqn"/>
                         <segue destination="aPG-sC-KdD" kind="show" identifier="toPropertyView" id="RqI-EY-fwQ"/>
+                        <segue destination="ncm-l0-4MD" kind="presentation" identifier="toLanModeTest" id="9Es-1s-UOl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6cj-Vr-Kay" userLabel="First Responder" sceneMemberID="firstResponder"/>
