--- a/iOS_Aura/Base.lproj/Main.storyboard
+++ b/iOS_Aura/Base.lproj/Main.storyboard
@@ -396,32 +396,17 @@
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nqe-Al-TtN">
-                                        <rect key="frame" x="442" y="8" width="150" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="150" id="Diq-am-4AO"/>
-                                            <constraint firstAttribute="height" constant="30" id="E6G-05-YUG"/>
-                                        </constraints>
-                                        <state key="normal" title="Fetch All Propeties">
-                                            <color key="titleColor" red="0.1141904071" green="0.49319788809999998" blue="0.079485878349999997" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="fetchAllPropertiesAction:" destination="crI-FA-vre" eventType="touchUpInside" id="Mlt-e8-bW7"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="Ws5-uR-nUu" firstAttribute="top" secondItem="Odc-pR-3lK" secondAttribute="bottom" constant="4" id="10x-ga-KgB"/>
                                     <constraint firstItem="9AV-Wd-cgd" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="45G-Wh-1RA"/>
                                     <constraint firstItem="Odc-pR-3lK" firstAttribute="width" secondItem="ebP-an-ueG" secondAttribute="width" id="4d7-wV-X6V"/>
-                                    <constraint firstItem="nqe-Al-TtN" firstAttribute="top" secondItem="ubm-gd-mCl" secondAttribute="top" constant="8" id="9Jl-hN-0PE"/>
                                     <constraint firstItem="sMD-TH-JbM" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="9bu-18-Xt9"/>
                                     <constraint firstItem="Ws5-uR-nUu" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="A0a-rd-zdE"/>
                                     <constraint firstItem="ebP-an-ueG" firstAttribute="trailing" secondItem="5QJ-DO-unj" secondAttribute="trailing" id="Bkn-rW-k4k"/>
                                     <constraint firstItem="Odc-pR-3lK" firstAttribute="top" secondItem="5QJ-DO-unj" secondAttribute="bottom" constant="4" id="CYp-dC-bbd"/>
                                     <constraint firstItem="Ws5-uR-nUu" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="DdE-UV-NQ4"/>
                                     <constraint firstItem="Odc-pR-3lK" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="KRZ-fi-MqZ"/>
-                                    <constraint firstAttribute="trailing" secondItem="nqe-Al-TtN" secondAttribute="trailing" constant="8" id="LHJ-lI-Yuv"/>
                                     <constraint firstItem="j7R-kf-4QG" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="PJh-hf-Biu"/>
                                     <constraint firstItem="9AV-Wd-cgd" firstAttribute="leading" secondItem="ubm-gd-mCl" secondAttribute="leading" constant="20" id="Ru6-OW-1eb"/>
                                     <constraint firstItem="sMD-TH-JbM" firstAttribute="width" secondItem="5QJ-DO-unj" secondAttribute="width" id="Tem-th-itE"/>
@@ -470,6 +455,34 @@
                                         <outlet property="delegate" destination="crI-FA-vre" id="4op-eN-Ip5"/>
                                     </connections>
                                 </searchBar>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="k23-ls-IZv" userLabel="Footer">
+                                    <rect key="frame" x="0.0" y="297" width="600" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yvJ-sW-cUK" userLabel="Separator">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="1"/>
+                                            <color key="backgroundColor" red="0.69010090827941895" green="0.71762937307357788" blue="0.73712962865829468" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="1" id="GSG-bi-KHW"/>
+                                            </constraints>
+                                        </view>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Are-3P-WiR" customClass="AuraTextButton" customModule="iOS_Aura" customModuleProvider="target">
+                                            <rect key="frame" x="233" y="7" width="135" height="30"/>
+                                            <state key="normal" title="Fetch All Properties"/>
+                                            <connections>
+                                                <action selector="fetchAllPropertiesAction:" destination="crI-FA-vre" eventType="touchUpInside" id="aFF-zz-9GP"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="yvJ-sW-cUK" firstAttribute="top" secondItem="k23-ls-IZv" secondAttribute="top" id="9UZ-V5-BFh"/>
+                                        <constraint firstAttribute="trailing" secondItem="yvJ-sW-cUK" secondAttribute="trailing" id="SEy-XY-EnZ"/>
+                                        <constraint firstItem="yvJ-sW-cUK" firstAttribute="leading" secondItem="k23-ls-IZv" secondAttribute="leading" id="fNj-05-2xs"/>
+                                        <constraint firstItem="Are-3P-WiR" firstAttribute="centerX" secondItem="k23-ls-IZv" secondAttribute="centerX" id="rRG-f3-e66"/>
+                                        <constraint firstItem="Are-3P-WiR" firstAttribute="centerY" secondItem="k23-ls-IZv" secondAttribute="centerY" id="yeY-Qe-1xD"/>
+                                    </constraints>
+                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="gray" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ExpandedPropertyCellId" rowHeight="75" id="u5t-DO-Ws2" customClass="PropertyTVCell" customModule="iOS_Aura" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="72" width="600" height="75"/>
